# remarkpy

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  TODO.md  llms.txt  pyproject.toml  test.py
remarkjs/: index.js  package.json
remarkpy/: __init__.py  _version.py  cli.py  core.py  remarkpy.js  test.js  test.py
remarkpyjs/: index-all.js  index.js  package.json  webpack.config.js
scripts/: build.py  build_binary.py  release.py
temp/: bundle.js  gen.js  t.py
tests/: test_cli.py  test_core.py  test_integration.py
